// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer: should return state by default 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": false,
}
`;

exports[`ui reducer: should toggle isFetching to false 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": false,
}
`;

exports[`ui reducer: should toggle isFetching to true 1`] = `
Immutable.Map {
  "isFetching": true,
  "isOnline": false,
}
`;

exports[`ui reducer: should toggle isOnline to false 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": false,
}
`;

exports[`ui reducer: should toggle isOnline to true 1`] = `
Immutable.Map {
  "isFetching": false,
  "isOnline": true,
}
`;
